Implement react hook form and Using Imagebb and authentication

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@
   VITE_storageBucket=zap-shift-700dc.firebasestorage.app
   VITE_messagingSenderId=958991682254
   VITE_appId=1:958991682254:web:b26ae54d61eeb2aea61e9f
+  VITE_image_host=b25f020886cefa37bee37d016fee5e24
